--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,10 @@
-.App {
-  text-align: center;
+body {
+  background: beige;
 }
 
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
+.card {
+  background: white;
+  border: 1px solid lightgray;
+  min-height: 50px;
+  padding: 15px;
 }
